@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix handling of invalid email addresses in headers (#1489092)
 - Added attachment_reminder plugin
 - Fix IMAP connection issue with default_socket_timeout < 0 and imap_timeout < 0 (#1489090)
 - Fix various PHP code bugs found using static analysis (#1489086)
